Correction for menu layout and on hover event modified to accomodate click on mobile.

--- a/website/static/sass/developers.scss
+++ b/website/static/sass/developers.scss
@@ -152,10 +152,23 @@ $red: #b94a48;
   text-align: center;
 }
 
+.dropdown-menu>.active>a,
+.dropdown-menu>.active>a:focus {
+  color: $developer-orange;
+  background-color: $white;
+}
+
+.dropdown-menu>.active>a:hover {
+  color: $developer-orange;
+  background-color: #eee;
+}
+
+.dropdown-menu .nav-link:first-of-type.active>a,
 .dropdown-menu .nav-link:first-of-type>a:hover {
   border-top-left-radius: 0.8em;
 }
 
+.dropdown-menu .nav-link:last-of-type.active>a,
 .nav-link:last-of-type>a:hover {
   border-bottom-left-radius: 0.8em;
 }
@@ -491,6 +504,12 @@ p {
 	font: bold 16px sans-serif;
 	padding: 30px 60px;
   min-height: 145px;
+}
+
+@media (max-width: 440px) {
+  .footer-distributed {
+    padding: 20px 20px;
+  }
 }
 
 .footer-logo-wrapper .img-thumbnail {
